[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://weapons/weapon.gd" type="Script" id=2]
[ext_resource path="res://overlap/hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://weapons/shooting_behaviors/ranged_weapon_shooting_behavior.gd" type="Script" id=4]
[ext_resource path="res://resources/shaders/outline_shadermat.tres" type="Material" id=5]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 10 )

[sub_resource type="CircleShape2D" id=5]
resource_local_to_scene = true
radius = 72.4431

[node name="Weapon" type="Node2D"]
script = ExtResource( 2 )
outline_shader_mat = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Hitbox" parent="Sprite" instance=ExtResource( 3 )]
collision_layer = 8

[node name="Collision" parent="Sprite/Hitbox" index="0"]
shape = SubResource( 4 )

[node name="Muzzle" type="Position2D" parent="Sprite"]

[node name="Attach" type="Position2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 5 )

[node name="ShootingBehavior" type="Node2D" parent="."]
script = ExtResource( 4 )

[connection signal="hit_something" from="Sprite/Hitbox" to="." method="_on_Hitbox_hit_something"]
[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]

[editable path="Sprite/Hitbox"]
